syntax = "proto3";

message State {
    uint32 transitions = 0;
    Room room = 1;
}

message Room {
    map<string, User> teachers = 0;
    map<string, User> students = 1;
    string host = 2;
    Content content = 3;
    uint32 endTimestamp = 4;
}

message User {
    string name = 0;
    map<string, Device> devices = 1;
    repeated Trophy trophies = 2;
    repeated ChatMessage chatMessages = 3;
}

message Device {
    string activityId = 0;
    string activityStreamId = 1;
    map<string, WebRTCStream> webRTCStreams = 2;
}

message WebRTCStream {
    string label = 0;
    map<string, WebRTCTrack> tracks = 1;
}

message WebRTCTrack {
    string sfu = 0;
}

message Trophy {
    uint32 timestamp = 0;
    string tropy = 1;
}

message ChatMessage {
    uint32 timestamp = 0;
    string message = 1;
}

message Content {
    enum Type {
        Blank = 0;
        WebRTCStream = 1;
        ActivityStream = 2;
        H5P = 3;
        Image = 4;
        Video = 5;
        Audio = 6;
    } 
    Type type = 0;
    string id = 1;
    string url = 2;
}